Image reversed in web

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 @media screen and (max-width: 900px) {
     .bg{
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
 
     .home1{
